package com.simplecityapps.shuttle.ui.common.recyclerview

object ViewTypes {
    const val Song = 0
    const val AlbumList = 1
    const val AlbumGrid = 2
    const val AlbumShuffle = 3
    const val AlbumArtistList = 4
    const val AlbumArtistGrid = 5
    const val Artwork = 6
    const val Queue = 7
    const val DiscNumber = 8
    const val Log = 9
    const val ExpandableAlbum = 10
    const val DetailSong = 11
    const val Playlist = 12
    const val Settings = 13
    const val OnboardingDirectory = 14
    const val Header = 15
    const val ExcludeList = 16
    const val HorizontalAlbumSection = 17
    const val HorizontalAlbumArtistSection = 18
    const val HorizontalSongSection = 19
    const val Genre = 20
    const val SmartPlaylist = 21
    const val MediaProvider = 22
    const val Changelog = 23
    const val License = 24
    const val Notes = 25
    const val Grouping = 26
    const val SleepTimer = 27
    const val ScanProgress = 28
    const val Sku = 29
    const val LibraryTab = 30
}
